[project]
name = "graph-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.6.0",
    "deepeval>=3.8.8",
    "graspologic>=3.4.4",
    "json-repair>=0.58.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.21",
    "langchain-experimental>=0.3.4",
    "langchain-neo4j>=0.3.0",
    "langchain-openai>=0.3.35",
    "langgraph>=1.0.1",
    "llama-index>=0.9.48",
    "llama-index-core>=0.14.15",
    "llama-index-embeddings-openai>=0.5.1",
    "llama-index-graph-stores-neo4j>=0.5.1",
    "llama-index-llms-anthropic>=0.10.10",
    "llama-index-llms-ollama>=0.9.1",
    "llama-index-llms-openai>=0.6.21",
    "llama-parse>=0.6.94",
    "matplotlib>=3.10.8",
    "neo4j>=5.28.3",
    "networkx>=3.6.1",
    "pymupdf>=1.27.1",
    "pypdf>=6.7.3",
    "python-dotenv>=1.2.1",
    "pyvis>=0.3.2",
    "ragas>=0.4.3",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.3",
    "unstructured[all-docs]>=0.18.32",
    "yfiles-jupyter-graphs>=1.10.10",
]
